crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__add-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"\n        1 +\n        let x = 10\n    \"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Add(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                9..10,
                                            ),
                                        ),
                                        9..10,
                                    ),
                                    (
                                        Error,
                                        21..12,
                                    ),
                                ),
                                9..12,
                            ),
                        ),
                        9..12,
                    ),
                ),
                9..12,
            ),
            (
                Statement(
                    (
                        VariableInit(
                            (
                                "let",
                                21..24,
                            ),
                            (
                                "x",
                                25..26,
                            ),
                            (
                                Expression(
                                    (
                                        Number(
                                            (
                                                10.0,
                                                29..31,
                                            ),
                                        ),
                                        29..31,
                                    ),
                                ),
                                29..31,
                            ),
                        ),
                        21..31,
                    ),
                ),
                21..31,
            ),
        ],
    ),
    [
        found end of input at 21..24 expected expression,
    ],
)
