crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__and-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"true and false and true\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        And(
                            (
                                And(
                                    (
                                        Boolean(
                                            (
                                                true,
                                                0..4,
                                            ),
                                        ),
                                        0..4,
                                    ),
                                    (
                                        "and",
                                        5..8,
                                    ),
                                    (
                                        Boolean(
                                            (
                                                false,
                                                9..14,
                                            ),
                                        ),
                                        9..14,
                                    ),
                                ),
                                0..14,
                            ),
                            (
                                "and",
                                15..18,
                            ),
                            (
                                Boolean(
                                    (
                                        true,
                                        19..23,
                                    ),
                                ),
                                19..23,
                            ),
                        ),
                        0..23,
                    ),
                ),
                0..23,
            ),
        ),
        0..23,
    ),
]
