crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__and.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"true and false\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        And(
                            (
                                Boolean(
                                    (
                                        true,
                                        0..4,
                                    ),
                                ),
                                0..4,
                            ),
                            (
                                "and",
                                5..8,
                            ),
                            (
                                Boolean(
                                    (
                                        false,
                                        9..14,
                                    ),
                                ),
                                9..14,
                            ),
                        ),
                        0..14,
                    ),
                ),
                0..14,
            ),
        ),
        0..14,
    ),
]
