crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__array-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(\"[]\")"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Array(
                            [],
                        ),
                        0..2,
                    ),
                ),
                0..2,
            ),
        ),
        0..2,
    ),
]
