crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__array-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"[\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Array(
                                    [],
                                ),
                                0..1,
                            ),
                        ),
                        0..1,
                    ),
                ),
                0..1,
            ),
        ],
    ),
    [
        found end of input at 1..1 expected expression, or '"]"',
    ],
)
